2013-01-07
* extract and report function names for Java class files and Dalvik dex files.
* write reports as gzip compressed tar instead of uncompressed tar
* squash licenses: if Ninka and FOSSology agree we have a lot stronger
evidence and so this should be reported.
* report Ninka and FOSSology licenses separately i the GUI

2013-01-06
* add a workaround for ranking if we have packages A and B (or more) where A
is contained in B but we're actually looking at the smaller package A and not
at the larger package B. If we have no unique hits at all, we will report A,
instead of B.
* rename BAT_FUNCTIONNAME_CACHE, to BAT_FUNCTIONNAMECACHE_C, since we want to
scan for method names for Java too
* add some more data to clonedbinit.py

2013-01-05
* tag statically linked elf files and display them in the gui
* tag version 11.0
* add more examples to clonedbinit.py

2013-01-04
* rename more databases in ranking.py
* licenses database now needs to be specified separately

2013-01-03
* give extra hints to squashfs unpacking, so it is possible to do better
filtering.
* don't overwrite picklefile if it already exists. This was causing display
issues in the GUI, since some information would be lost.
* add strings of renamed packages together to increase accurace in ranking.
Uses a new configuration BAT_CLONE_DB

2013-01-02
* fix loop packing results in ranking.py that potentially has a big
performance impact

2012-12-30
* change name of some databases in ranking code: remove "SQLITE_" to make
things a bit less verbose.

2012-12-29
* change default setting for multiprocessing to 'yes'

2012-12-27
* BAT 10.0 released

2012-12-16
* batchextractprogramstrings.py: distribute tasks over available workers
differently to make it less likely that one worker gets all the big tasks.

2012-12-15
* bat/fwunpack.py: let unpackFile handle lengths properly, only when offset ==
0. Only used in ZIP unpacking at the moment.