@@ -4,6 +4,7 @@
 * squash licenses: if Ninka and FOSSology agree we have a lot stronger
 evidence and so this should be reported.
 * report Ninka and FOSSology licenses separately i the GUI
+* record unmatched strings for later reporting
 
 2013-01-06
 * add a workaround for ranking if we have packages A and B (or more) where A
